--- a/App/package.json
+++ b/App/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jquery": "^1.9.1",
     "oauth": "^0.9.15",
     "react": "^16.4.2",
