--- a/App/package.json
+++ b/App/package.json
@@ -11,12 +11,17 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "fb": "^2.0.0",
     "jquery": "^1.9.1",
     "oauth": "^0.9.15",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-linkedin-oauth2": "^1.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "reactstrap": "^6.3.1",
