--- a/App/package.json
+++ b/App/package.json
@@ -24,6 +24,8 @@
     "passport-linkedin-oauth2": "^1.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "reactstrap": "^6.3.1",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
