--- a/App/package.json
+++ b/App/package.json
@@ -11,9 +11,24 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "express-session": "^1.15.6",
+    "fb": "^2.0.0",
+    "jquery": "^1.9.1",
+    "oauth": "^0.9.15",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-linkedin-oauth2": "^1.5.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.3.1",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -24,7 +39,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^3.5.1",
     "css-loader": "^1.0.0",
-    "eslint": "^5.0.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
